gcc-14.2.0/libgo/misc/cgo/errors/testdata/err2.go
version https://git-lfs.github.com/spec/v1
oid sha256:c4d2d6223dd32316a2fdb6d11a8fa00897062f781f1caf6658f5f32b608210e4
size 2562
